[metadata]
name = pdbtoolkits
version = 0.1.0
author = Mohamed A. A. Elrefaiy
author_email = moelrefaiy@gmail.com
description = A toolkit for working with PDB files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pdb-toolKits
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    rdkit>=2020.09.1

[options.extras_require]
dev =
    pytest>=6.0.0
docs =
    sphinx>=3.0.0
    sphinx_rtd_theme>=0.5.0